# firewalla-local-skill

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  README.zh.md  pyproject.toml
.github/workflows/: ci.yml
docs/: format_report.md  prd.md  prd.zh.md  rfc.md  rfc.zh.md  test.md  working.md
skills/: firewalla.md
src/firewalla_skill/: __init__.py  cli.py
tests/: test_cli.py  test_integration_cli.py  test_live.py
tests/fixtures/: fake_snapshot.json
