[project]
name = "firewalla-skill"
version = "0.1.0"
description = "Local-first read-only Firewalla skill CLI"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Firewalla Skill Contributors" }]
dependencies = []

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
firewalla_skill = ["py.typed"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
firewalla-skill = "firewalla_skill.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: offline CLI integration tests",
  "live: opt-in tests against a real Firewalla box",
]
